--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,13 +8,13 @@
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="apple-mobile-web-app-title" content="Cara">
-  <meta name="application-name" content="Cara">
+  <meta name="apple-mobile-web-app-title" content="cara">
+  <meta name="application-name" content="cara">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Untangle your personal life" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,11 +29,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>cara</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Created for COMP30022</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
